<resources>
    <string name="app_name">ChatArena</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT</string>
    <string name="display_name">Display name</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="create_account">create Account</string>
    <string name="log_out">Log Out</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there_i_am_in_chat_arena">Hi there, I am in Chat Arena.</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="display_name1">Display Name</string>
    <string name="status">Your Status</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="user_current_status">User Current Status</string>
    <string name="total_friends">Total Friends</string>


</resources>
