<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.piyush_pooja.chatarena.SettingsActivity"
    android:background="@color/colorPrimaryDark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_height="200dp"
        android:src="@drawable/user"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:id="@+id/settings_image" />

    <Button
        android:text="@string/change_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:id="@+id/settings_image_btn"
        android:layout_below="@+id/settings_status"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@android:color/white" />

    <Button
        android:text="@string/change_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/settings_status_btn"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_below="@+id/settings_image_btn"
        android:layout_alignStart="@+id/settings_image_btn" />

    <TextView
        android:text="@string/hi_there_i_am_in_chat_arena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_status"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_below="@+id/settings_display_name"
        android:layout_alignEnd="@+id/settings_image"
        android:layout_marginTop="26dp" />

    <TextView
        android:text="@string/display_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_display_name"
        android:textSize="24sp"
        android:textColor="#ffffff"
        android:layout_below="@+id/settings_image"
        android:layout_alignStart="@+id/settings_image_btn"
        android:layout_marginTop="49dp" />

</RelativeLayout>
