<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.piyush_pooja.chatarena.RegisterActivity">

    <include layout="@layout/app_bar_layout"  android:id="@+id/register_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="384dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:id="@+id/reg_display_name"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:id="@+id/reg_email"

        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_display_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:id="@+id/reg_password"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reg_btn"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_password"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/colorAccent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@android:color/white" />

    <TextView
        android:text="Create a New Account"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/register_toolbar"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="0dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />
</android.support.constraint.ConstraintLayout>
