<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.piyush_pooja.chatarena.ProfileActivity"
    android:background="@android:color/black">

    <Button
        android:text="Send Friend Request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/profile_sendReqBtn"
        android:layout_below="@+id/profile_totalFriends"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/defaultavatar"
        android:layout_alignBottom="@+id/profile_dispalyName"
        android:layout_marginBottom="45dp"
        android:id="@+id/profileImage"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Display Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:id="@+id/profile_dispalyName"
        android:textSize="24dp"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/total_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:id="@+id/profile_totalFriends"
        android:textColor="@android:color/white"
        android:layout_below="@+id/profile_status"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/user_current_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/profile_status"
        android:textColor="@android:color/white"
        android:layout_below="@+id/profile_dispalyName"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/decline_friend_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_decline_btn"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/profile_sendReqBtn"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
